@@ -1,0 +1,130 @@
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <title>#: </title>
+    <style>
+      body {
+      	font: medium "Lucida Grande", Lucida, Verdana, sans-serif;
+      }
+      .header {
+      	font-size: large;
+      }
+      .ticketbox {
+      	background-color: #fefcd3;
+      	width: 90%;
+      	padding: .5em 1em;
+      	border-style: outset;
+      	border-width: 1px;
+      	margin: 2px;
+      }
+      .title {
+      	font-weight: bold;
+      	border-bottom: 1pt inset #dfdfdf;
+      	padding-bottom: .5em;
+      }
+      .label {
+      	font-size: x-small;
+      	color: #7e7e7e;
+      	border-bottom: 1pt inset #dfdfdf;
+      	padding-bottom: .5em;
+      	width:  30%;
+      }
+      .value {
+      	border-bottom: 1pt inset #dfdfdf;
+      	padding-bottom: .5em;
+      	font-size: small;
+      }
+      .header {
+      	width:  90%;
+      	padding-bottom: 1em;
+      }
+      .descheader {
+      	font-size: x-small;
+      	color: #7e7e7e;
+      	border-bottom: 1pt inset #dfdfdf;
+      	padding-bottom: .5em;
+      	font-weight: bold;
+      }
+      .descbody {
+      	font-size: small;
+      	padding: 1em;
+      }
+      .changetitle {
+      	font-size: small;
+      	margin: 1em;
+      }
+      .changeitem {
+      	font-size: small;
+      }
+      .fieldname {
+      	font-weight: bold;
+      }
+      .from {
+      	font-style: italic;
+      }
+      .to {
+      	font-style: italic;
+      }
+      .longchange {
+      	font-size: small;
+      }
+      .htmldiff {
+      	margin-left: 2em;
+      	padding: 1em;
+      	width: 90%;
+      	background-color: #f3f3f3;
+      	margin: 5px;
+      	border-style: outset;
+      	border-width: 1px;
+      }
+      .commentstitle {
+      	font-size: small;
+      	margin: 1em;
+      }
+      .comments {
+      	margin: 0 0 0 2em;
+      }
+      .footer {
+      	font-size: small;
+      }
+    </style>
+  </head>
+  <body bgcolor="white" style="font: medium &#34;Lucida Grande&#34;, Lucida, Verdana, sans-serif">
+    <span class="header" style="font-size: large;">Ticket # ( )</span>
+    <div class="ticketbox" style="background-color: #fefcd3; width: 90%; padding: .5em 1em; border-style: outset; border-width: 1px; margin: 2px;">
+      <div class="title" style="font-weight: bold; border-bottom: 1pt inset #dfdfdf; padding-bottom: .5em;"/>
+      <table class="header" width="100%">
+        <tr>
+          <td class="label" width="30%" style="font-size: x-small; color: #7e7e7e; border-bottom: 1pt inset #dfdfdf; padding-bottom: .5em; width:  30%;">Reporter:</td>
+          <td class="value" width="70%" style="border-bottom: 1pt inset #dfdfdf; padding-bottom: .5em; font-size: small;">None</td>
+        </tr><tr>
+          <td class="label" width="30%" style="font-size: x-small; color: #7e7e7e; border-bottom: 1pt inset #dfdfdf; padding-bottom: .5em; width:  30%;">Owner:</td>
+          <td class="value" width="70%" style="border-bottom: 1pt inset #dfdfdf; padding-bottom: .5em; font-size: small;">None</td>
+        </tr>
+      </table>
+    </div>
+      <div class="changetitle" style="font-size: small; margin: 1em;">Changes: (by <strong>user1</strong>)</div>
+      <ul>
+      </ul>
+      <ul>
+      </ul>
+      <div class="commentstitle" style="font-size: small; margin: 1em;">Attachments:</div>
+      <ul>
+        <li>File <span class="fieldname" style="font-weight: bold; font-style: italic;"/> added: <span style="font-style: italic"><p>
+<tt>Some</tt> <strong>WikiFormatted</strong> <em>text</em><br />
+</p>
+</span></li>
+      </ul>
+      <div class="commentstitle" style="font-size: small; margin: 1em;">Comments: </div>
+      <div class="comments" style="margin: 0 0 0 2em;"><p>
+<tt>Some</tt> <strong>WikiFormatted</strong> <em>text</em><br />
+</p>
+</div>
+    <br/>
+    <hr/>
+    <br/>
+    <div class="footer" style="font-size: small;">Ticket URL: <a href="http://example.org/trac.cgi/ticket">http://example.org/trac.cgi/ticket</a><br/>
+    My Project <a href="http://example.org/trac.cgi">http://example.org/trac.cgi</a><br/>
+    My example project<br/>
+    </div>
+  </body>
+</html>
